resetting contenteditable to false when not editing label and pre-wrapping whitespaces when typing to avoid the &nbsp string from showing up on the label

--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,5 @@ a:hover {
 }
 
 .show {display: block;}
+
+.labelText { white-space: pre-wrap; }
